# easy-pandoc-gui

./: .gitignore  .lintstagedrc.json  README.md  README.zh-CN.md  eslint.config.mjs  package.json  pnpm-lock.yaml  tsconfig.base.json  vitest.config.ts
.github/: release.yml
.github/workflows/: ci.yml  release.yml
apps/cli/: package.json
apps/cli/src/: main.test.ts  main.ts
apps/desktop/: index.html  package.json  tsconfig.json  vite.config.ts
apps/desktop/src/: App.test.tsx  App.tsx  main.tsx  product-state.ts  styles.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: backend.rs  lib.rs  main.rs
apps/desktop/src/features/compat/: RuleMatrixPanel.tsx
apps/desktop/src/features/harness/: HarnessPanel.tsx
apps/desktop/src/features/logs/: LogPanel.tsx
apps/desktop/src/features/updates/: UpdatePanel.tsx  useDesktopUpdate.ts
apps/desktop/src/features/workbench/: WorkbenchPanel.tsx  backend.ts  settings.ts
docs/adr/: 0001-architecture-and-stack.md
docs/logs/: 2026-04-18-session.md  EXECUTION_LOG.md  observability-event-catalog.md
docs/release/: RELEASING.md  RELEASING.zh-CN.md  delivery-boundary.md  delivery-boundary.zh-CN.md
docs/standards/: markdown-compatibility-matrix.md
docs/superpowers/plans/: 2026-04-18-testpandoc-modern.md
docs/superpowers/specs/: 2026-04-18-testpandoc-modern-design.md
fixtures/real-world/: harness-report.json  harness-report.md  manifest.json
scripts/: check-version-consistency.mjs
